# pokeemerald-multiplatform

./: .gitignore  .gitmodules  LICENSE  Makefile_pc  README.md  launch.sh
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/pokeemerald/experimental/: GbaControlsView.java  PokeEmeraldActivity.java
android/app/src/main/res/values/: styles.xml
include/: platform.h
include/gba/: m4a_internal.h  macro.h
src/: agb_flash.c  berry_fix_program.c  diploma.c  hall_of_fame.c  m4a.c  main_menu.c  music_player.c  option_menu.c  save.c  save_failed_screen.c  sound_mixer.c  starter_choose.c  trainer_card.c
src/platform/: bios.c  dma.c  sdl2.c
tools/mid2agb/: agb.cpp
